add storage client delete method